add block/unblock admin page plus test cases

--- a/admin_templates/admin.html
+++ b/admin_templates/admin.html
@@ -44,6 +44,11 @@
                                 <td> DELETE </td>
                                 <td> Deletes a user from database </td>
                             </tr>
+                            <tr>
+                                <th scope="row"><button type="button" class="btn btn-default admin-btn" onclick="window.open('/block_user');">Block/Unblock User</button></th>
+                                <td> POST </td>
+                                <td> Blocks/Unblocks a user </td>
+                            </tr>
                             </tbody>
                         </table>
                     </div>
